--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         
         <footer>
             <h4> todos los derechos reservados </h4>
+            <h5>seguinos en nuestras redes</h5>
         </footer>
     </div>
 </body>
